--- a/Html5Demo/Web.config
+++ b/Html5Demo/Web.config
@@ -1,10 +1,14 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 
 <configuration>
+  <configSections>
+        <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+        <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </configSections>
 	<appSettings>
 		<add key="webpages:Version" value="2.0.0.0" />
 		<add key="webpages:Enabled" value="false" />
@@ -14,10 +18,8 @@
 	</appSettings>
 
 	<connectionStrings>
-  <add name="My.MySettings.TelerikConnectionString" connectionString="Data Source=(local);Initial Catalog=AdventureWorks;Integrated Security=SSPI"
-   providerName="System.Data.SqlClient" />
-  <add name="Azure" connectionString="Data Source=mss-iotag.database.windows.net;Initial Catalog=prod_iotag_master;Persist Security Info=True;User ID=iotag_usr;Password=&quot;M@ng@n2020=&quot;"
-   providerName="System.Data.SqlClient" />
+  <add name="My.MySettings.TelerikConnectionString" connectionString="Data Source=(local);Initial Catalog=AdventureWorks;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
+  <add name="Azure" connectionString="Data Source=mss-iotag.database.windows.net;Initial Catalog=prod_iotag_master;Persist Security Info=True;User ID=iotag_usr;Password=&quot;M@ng@n2020=&quot;" providerName="System.Data.SqlClient" />
  </connectionStrings>
 
 	<system.web>
@@ -66,4 +68,9 @@
             </dependentAssembly>
         </assemblyBinding>
     </runtime>
+    <entityFramework>
+        <providers>
+            <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+        </providers>
+    </entityFramework>
 </configuration>
