--- a/Html5Demo/packages.config
+++ b/Html5Demo/packages.config
@@ -1,5 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EntityFramework" version="6.4.0" targetFramework="net40" />
   <package id="jQuery" version="2.0.3" targetFramework="net40" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.40804.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net40" />
