--- a/MvcDemo/VB.MvcDemo.vbproj
+++ b/MvcDemo/VB.MvcDemo.vbproj
@@ -229,7 +229,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
-    <Folder Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ReportLibrary\VB.ReportLibrary.vbproj">
@@ -246,6 +245,9 @@
     <Content Include="Resources\world.shp">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Properties\PublishProfiles\HorizonMvcDemo - Web Deploy.pubxml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
