--- a/ReportLibrary/app.config
+++ b/ReportLibrary/app.config
@@ -5,8 +5,6 @@
     <connectionStrings>
         <add name="My.MySettings.TelerikConnectionString" connectionString="Data Source=(local);Initial Catalog=AdventureWorks;Integrated Security=SSPI"
             providerName="System.Data.SqlClient" />
-        <add name="My.MySettings.AzureHorizon1" connectionString="Data Source=mss-iotag.database.windows.net;Initial Catalog=prod_iotag_master;Persist Security Info=True;User ID=iotag_usr;Password=&quot;M@ng@n2020=&quot;"
-            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <system.diagnostics>
         <sources>
@@ -27,7 +25,7 @@
                  type="Microsoft.VisualBasic.Logging.FileLogTraceListener, Microsoft.VisualBasic, Version=8.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL"
                  initializeData="FileLogWriter"/>
             <!-- Uncomment the below section and replace APPLICATION_NAME with the name of your application to write to the Application Event Log -->
-            <!--<add name="EventLog" type="System.Diagnostics.EventLogTraceListener" initializeData="APPLICATION_NAME"/> -->
+            <add name="EventLog" type="System.Diagnostics.EventLogTraceListener" initializeData="VBReportExamplesVS2019-dev-as"/>
         </sharedListeners>
     </system.diagnostics>
 </configuration>
